<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".HomeActivity" >

    <RelativeLayout
        android:id="@+id/adcontainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_90dp"
        android:background="@color/common_red"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:scaleType="center"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxWidth="@dimen/dimen_360dp"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/dimen_36sp" />

        <Button
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/btn_action"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:text="@string/settings"
            android:textColor="@drawable/color_remote_action"
            android:textSize="@dimen/dimen_28sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_200dp"
        android:src="@drawable/home_hongbao_icon" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/gudie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_370dp"
            android:padding="@dimen/dimen_20dp"
            android:text="@string/open_study_course"
            android:textColor="#88FFFFFF"
            android:textSize="@dimen/dimen_24sp" />
    </FrameLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/ic_btn_blue"
        android:padding="@dimen/dimen_20dp"
        android:text="@string/open_use_service"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/dimen_36sp" />

    <ImageView
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_300dp"
        android:layout_below="@id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:src="@drawable/icon"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/personal_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="vertical"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/personal_update_account"
            style="@style/personal_list_style"
            android:drawableLeft="@drawable/home_help_record"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:text="@string/open_see_history" />

        <TextView
            android:id="@+id/personal_help"
            style="@style/personal_list_style"
            android:drawableLeft="@drawable/home_help_rank"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:text="@string/open_see_other" />
    </LinearLayout>

</RelativeLayout>